# HelixOS

./: CONTRIBUTING.md  HELIXOS_BLUEPRINT.md  HelixOS_Blueprint_Final.docx  README.md  demo.py  gradio.py  pyproject.toml
.github/workflows/: ci.yml
agents/core/: automation_orchestrator.md  code_reviewer.md  frontend_builder.md  research_analyst.md  security_auditor.md
agents/core/code_review/: system_prompt.md
agents/core/critics/reliability_check/: system_prompt.md
agents/core/critics/reliability_check/test_cases/: basic_test.yaml
agents/core/security_review/: system_prompt.md
agents/core/skills/code_review/: system_prompt.md
agents/core/skills/code_review/test_cases/: basic_test.yaml
agents/core/skills/research/: system_prompt.md
agents/core/skills/security_review/: system_prompt.md
agents/core/skills/security_review/test_cases/: basic_test.yaml
helixos/: __init__.py  cli.py  exceptions.py  helixos.py  workflow.py
helixos/agents/: loader.py  observer.py  semantic_loader.py
helixos/defaults/: models.yaml
helixos/orchestrator/: router.py  structured.py
helixos/pydantic_models/: __init__.py  critic.py  handoff.py
helixos/resources/: monitor.py
helixos/ui/: canvas.py
recipes/: frontend_builder.py  repo_auditor.py  research_report.py
tests/: conftest.py  test_canvas.py  test_cli.py  test_gradio_stub.py  test_loader.py  test_observer.py  test_pydantic_models.py  test_recipes.py  test_resources.py  test_router.py  test_semantic_loader.py  test_structured.py
