[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'helixos'
version = '0.1.0'
requires-python = '>=3.11'
dependencies = ['pydantic>=2.0', 'chromadb>=0.4.0', 'httpx>=0.27.0', 'instructor>=1.0.0', 'openai>=1.0.0', 'psutil>=5.9.0']

[project.optional-dependencies]
dev = ['pytest>=7.0', 'pytest-mock>=3.0']
gpu = ['pynvml>=11.0.0']

[tool.setuptools.package-data]
helixos = ['defaults/*.yaml']
